# Kungsbacka.AI.Bygglovshandlingar

./: LICENSE  README.md
API/: api.py  direction.py  distance_markers.py  entrypoint.sh  fasad.py  ground_level.py  lib.py  response_model.py  situationsplan.py  skalstock.py
Docker/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
Dokumentation/: API.docx  Annoteringsverktyget.docx  Hur man bygger en image.docx  Kungsbacka felkoder.xlsx  Licenser.docx
Träning/: avstand_object.ipynb  eval_api.ipynb  eval_distance.ipynb  eval_fasad.ipynb  eval_riktning.ipynb  eval_skalstock.ipynb  fasad.ipynb  kompass.ipynb  marklinjer.ipynb  skalstock.ipynb
Träning/Object_detection/: object_detection_helper.py
